--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flex 切版任務 - 部落格文章卡片設計</title>
-    <link rel="stylesheet" href="/reset.css" />
+    <link rel="stylesheet" href="./reset.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=LXGW+WenKai+Mono+TC&family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital@1&family=Tourney:wght@200&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/all.css" />
+    <link rel="stylesheet" href="./all.css" />
   </head>
   <body>
     <div class="warp">
