--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
       href="https://fonts.googleapis.com/css2?family=LXGW+WenKai+Mono+TC&family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital@1&family=Tourney:wght@200&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
   </head>
   <body>
     <div class="container">
       <!-- 導覽列 -->
       <div class="nav">
         <ul>
-          <li><a href="#">首頁</a></li>
-          <li><a href="#">部落格</a></li>
+          <li><a href="index.html">首頁</a></li>
+          <li><a href="blog.html">部落格</a></li>
         </ul>
       </div>
-      <!-- 首頁看板 -->
+      <!-- 首頁第一區塊 -->
       <div class="banner">
         <div class="item left"></div>
         <div class="item right">
@@ -31,45 +35,78 @@
           </div>
         </div>
       </div>
+      <!-- 首頁重疊區塊 -->
       <div class="bannerTextBox">
         <p>嗨，我是Alyse一名深耕前端技術的工程師。</p>
         <p>
           擅長 React、Vue
           等框架，同時熱愛為轉職與新手工程師提供職涯指導。邀請你與我一起，開啟更具潛能的程式與職涯之旅！
         </p>
-        <ul>
+        <ul class="socialLinks">
           <li>
-            <a href="#" title="YouTube"
-              ><img src="src/img/desktop/index/onlyIcon.png" alt="YouTube Link"
-            /></a>
-          </li>
-          <li>
-            <a href="#" title="LinkedIn"
-              ><img
-                src="src/img/desktop/index/onlyIcon-1.png"
+            <a
+              href="https://www.youtube.com/"
+              title="YouTube"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="src/img/desktop/index/onlyIcon.png"
                 alt="YouTube Link"
-            /></a>
+              />
+            </a>
           </li>
           <li>
-            <a href="#" title="Facebook"
-              ><img
+            <a
+              href="https://podcasts.apple.com/"
+              title="Podcast"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="src/img/desktop/index/onlyIcon-1.png"
+                alt="Podcast Link"
+              />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.facebook.com/"
+              title="Facebook"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
                 src="src/img/desktop/index/onlyIcon-2.png"
                 alt="Facebook Link"
-            /></a>
+              />
+            </a>
           </li>
           <li>
-            <a href="#" title="LinkedIn"
-              ><img
-                src="src/img/desktop/index/onlyIcon-3.png"
+            <a
+              href="https://www.linkedin.com/"
+              title="LinkedIn"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="src/img/desktop/index/icons8-linkedin.png"
                 alt="LinkedIn Link"
-            /></a>
+              />
+            </a>
           </li>
           <li>
-            <a href="#" title="LinkedIn"
-              ><img
+            <a
+              href="https://www.instagram.com/"
+              title="Instagram"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
                 src="src/img/desktop/index/onlyIcon-3.png"
-                alt="YouTube Link"
-            /></a>
+                alt="Instagram Link"
+              />
+            </a>
           </li>
         </ul>
       </div>
@@ -114,7 +151,7 @@
                 React 核心概念，真正把理論應用在實際專案中。
               </p>
             </div>
-            <button class="blogBtn">閱讀內文</button>
+            <button onclick="blogContent()" class="blogBtn">閱讀內文</button>
           </li>
           <li>
             <img src="src/img/desktop/blog/blogPhoto2.png" alt="Blog_Photo2" />
@@ -128,7 +165,7 @@
                 對正在求職的前端工程師而言，作品集往往是第一個「說話」的利器。當面試官瀏覽你的網頁作品時，能夠快速了解你的程式邏輯、設計感以及解決問題的思路。我在協助多位同學優化履歷與作品集的過程中，總結出一些關鍵要素，分享給正在打造、升級作品集的你。
               </p>
             </div>
-            <button class="blogBtn">閱讀內文</button>
+            <button onclick="blogContent()" class="blogBtn">閱讀內文</button>
           </li>
           <li>
             <img src="src/img/desktop/blog/blogPhoto3.png" alt="Blog_Photo3" />
@@ -143,7 +180,7 @@
                 CSS，打造兼具美感與功能性的網頁。
               </p>
             </div>
-            <button class="blogBtn">閱讀內文</button>
+            <button onclick="blogContent()" class="blogBtn">閱讀內文</button>
           </li>
           <li>
             <img src="src/img/desktop/blog/blogPhoto4.png" alt="Blog_Photo4" />
@@ -157,7 +194,7 @@
                 能夠憑藉自學進入前端領域，聽起來令人振奮，但實際過程中可能遇到的挫折與疑慮，卻常常令人猶豫。回想當初我也是對程式一竅不通，卻在興趣的驅使下毅然踏上自學之路。今天想透過這篇文章，分享我的轉職經驗和一些調適心態的秘訣，盼能為有心投入前端領域的你提供一些力量與方向。
               </p>
             </div>
-            <button class="blogBtn">閱讀內文</button>
+            <button onclick="blogContent()" class="blogBtn">閱讀內文</button>
           </li>
           <li>
             <img src="src/img/desktop/blog/blogPhoto5.png" alt="Blog_Photo5" />
@@ -172,7 +209,7 @@
                 面試前端工程師時，你或許擔心被問到各種刁鑽的技術題目，或是擔憂無法在短時間內展現實力。其實，許多面試官關注的重點並不僅是程式碼本身，更包含問題解決的流程與溝通能力。這篇文章將分享我在面試過程中常見的三大難題，以及如何以更具條理的方式回應，讓你在面試場合中脫穎而出。
               </p>
             </div>
-            <button class="blogBtn">閱讀內文</button>
+            <button onclick="blogContent()" class="blogBtn">閱讀內文</button>
           </li>
           <li>
             <img src="src/img/desktop/blog/blogPhoto6.png" alt="Blog_Photo6" />
@@ -189,7 +226,7 @@
                 的獨特魅力，並透過簡單範例幫助你更順利地切換到新版本的思維模式。
               </p>
             </div>
-            <button class="blogBtn">閱讀內文</button>
+            <button onclick="blogContent()" class="blogBtn">閱讀內文</button>
           </li>
           <li>
             <img src="src/img/desktop/blog/blogPhoto7.png" alt="Blog_Photo7" />
@@ -205,7 +242,7 @@
                 Git 流程，並學會在前端專案中輕鬆管理與協作。
               </p>
             </div>
-            <button class="blogBtn">閱讀內文</button>
+            <button onclick="blogContent()" class="blogBtn">閱讀內文</button>
           </li>
           <li>
             <img src="src/img/desktop/blog/blogPhoto8.png" alt="Blog_Photo8" />
@@ -222,7 +259,7 @@
                 SEO 小技巧與實務做法，幫助你顯著提升網站曝光度。
               </p>
             </div>
-            <button class="blogBtn">閱讀內文</button>
+            <button onclick="blogContent()" class="blogBtn">閱讀內文</button>
           </li>
           <li>
             <img src="src/img/desktop/blog/blogPhoto9.png" alt="Blog_Photo9" />
@@ -236,7 +273,7 @@
                 前端世界日新月異，第三方套件與工具種類繁多，一個不留神就可能引爆依賴衝突。為了確保專案長期維護的穩定度，建立一套良好的依賴管理與自動化流程至關重要。在本文中，我會分享從套件更新到測試部署的實務經驗，讓你在開發時不再手忙腳亂。
               </p>
             </div>
-            <button class="blogBtn">閱讀內文</button>
+            <button onclick="blogContent()" class="blogBtn">閱讀內文</button>
           </li>
           <li>
             <img
@@ -256,7 +293,7 @@
                 TypeScript，並透過真實案例展示它為開發流程帶來的優勢。
               </p>
             </div>
-            <button class="blogBtn">閱讀內文</button>
+            <button onclick="blogContent()" class="blogBtn">閱讀內文</button>
           </li>
           <li>
             <img
@@ -273,7 +310,7 @@
                 寫程式容易，但要確保程式在多種情境、裝置都能正常運行就沒那麼簡單了。這時「測試」便成了維持程式品質的關鍵環節。從最基礎的單元測試，到模擬使用者行為的端對端測試，每一種測試方式都有它的價值與最佳應用情境。本文將帶你認識不同類型的前端測試工具，以及如何在開發流程中實踐自動化測試，打造更穩定、可預期的專案。
               </p>
             </div>
-            <button class="blogBtn">閱讀內文</button>
+            <button onclick="blogContent()" class="blogBtn">閱讀內文</button>
           </li>
         </ul>
       </div>
@@ -321,6 +358,10 @@
           </li>
         </ul>
       </div>
+      <div class="footer">
+        <p>© 2025 Alyse Wang. All rights reserved.</p>
+      </div>
     </div>
+    <script src="src/JavaScript/index.js"></script>
   </body>
 </html>
